<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondo"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fondo" />

    <TextView
        android:id="@+id/title"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/mis_tareas"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/etiquetas"
        android:layout_below="@id/title"
        android:layout_marginTop="10dp"
        android:text="@string/itt"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/editTextlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cajaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textColor="@color/color_texto"
                android:textColorHint="@color/grisClaro"
                android:textSize="17sp">

                <requestFocus />

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cajaPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/color_texto"
                android:textColorHint="@color/grisClaro"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextlayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/crearCuenta"
        style="@style/etiquetas"
        android:layout_below="@id/button"
        android:layout_marginTop="16dp"
        android:text="@string/crea_una_cuenta"
        android:textSize="22sp"
        android:onClick="crearCuenta"
        android:pointerIcon="hand"/>

</RelativeLayout>